Update resume in index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <img src="images/arrow-right-white.png" alt="arrow">
                             </span>
                         </a>
-                        <a href="Syed Kareem s1.pdf"  class="link-default animate-me" style="text-decoration: none; color: white; font-size: 19px; padding: 10px 30px 10px 10px; display: flex; align-items: center;" target="_blank">
+                        <a href="Syed.Kareem.pdf"  class="link-default animate-me" style="text-decoration: none; color: white; font-size: 19px; padding: 10px 30px 10px 10px; display: flex; align-items: center;" target="_blank">
                             Download CV
                             <span style="margin-left: 5px;">
                                 <img src="images/downloads.png" style="width: 20px; filter: invert(1);" alt="download">
