--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               
                 <div class="portfolio-img">
                     <div class="img-area">
-                       <img src="images/Izna Store.png" alt="portfolio img">
+                       <img src="images/izna_store.png" alt="portfolio img">
                     </div>
                     <div class="img-area">
                        <img src="images/ruhi's kitchen 2.png" alt="portfolio img">
